# android-7.0.0_r1

./: Android.bp  bootstrap.bash
system/bt/bta/: Android.mk  BUILD.gn
system/bt/bta/ag/: bta_ag_act.c  bta_ag_api.c  bta_ag_at.c  bta_ag_cfg.c  bta_ag_ci.c  bta_ag_cmd.c  bta_ag_int.h  bta_ag_main.c  bta_ag_rfc.c  bta_ag_sco.c  bta_ag_sdp.c
system/bt/bta/ar/: bta_ar.c
system/bt/bta/av/: bta_av_aact.c  bta_av_act.c  bta_av_api.c  bta_av_cfg.c  bta_av_ci.c  bta_av_int.h  bta_av_main.c  bta_av_sbc.c  bta_av_ssm.c
system/bt/bta/dm/: bta_dm_act.c  bta_dm_api.c  bta_dm_cfg.c  bta_dm_ci.c  bta_dm_int.h  bta_dm_main.c  bta_dm_pm.c
system/bt/bta/gatt/: bta_gattc_act.c  bta_gattc_api.c  bta_gattc_cache.c  bta_gattc_int.h  bta_gattc_main.c  bta_gattc_utils.c  bta_gatts_act.c  bta_gatts_api.c  bta_gatts_int.h  bta_gatts_main.c  bta_gatts_utils.c
system/bt/bta/hf_client/: bta_hf_client_act.c  bta_hf_client_api.c  bta_hf_client_at.c  bta_hf_client_at.h  bta_hf_client_cmd.c  bta_hf_client_int.h  bta_hf_client_main.c  bta_hf_client_rfc.c  bta_hf_client_sco.c  bta_hf_client_sdp.c
system/bt/bta/hh/: bta_hh_act.c  bta_hh_api.c  bta_hh_cfg.c  bta_hh_int.h  bta_hh_le.c  bta_hh_main.c  bta_hh_utils.c
system/bt/bta/hl/: bta_hl_act.c  bta_hl_api.c  bta_hl_ci.c  bta_hl_int.h  bta_hl_main.c  bta_hl_sdp.c  bta_hl_utils.c
system/bt/bta/include/: bta_ag_api.h  bta_ag_ci.h  bta_ag_co.h  bta_api.h  bta_ar_api.h  bta_av_api.h  bta_dm_co.h  bta_gatt_api.h  bta_hf_client_api.h  bta_hh_co.h  bta_hl_api.h  bta_hl_ci.h  bta_hl_co.h  bta_jv_api.h  bta_jv_co.h  bta_mce_api.h  bta_pan_api.h  bta_pan_ci.h  bta_pan_co.h  bta_sdp_api.h  utl.h
system/bt/bta/jv/: bta_jv_act.c  bta_jv_api.c  bta_jv_cfg.c  bta_jv_int.h  bta_jv_main.c
system/bt/bta/mce/: bta_mce_act.c  bta_mce_api.c  bta_mce_cfg.c  bta_mce_int.h  bta_mce_main.c
system/bt/bta/pan/: bta_pan_act.c  bta_pan_api.c  bta_pan_ci.c  bta_pan_int.h  bta_pan_main.c
system/bt/bta/pb/: bta_pbs_int.h
system/bt/bta/sdp/: bta_sdp_act.c  bta_sdp_api.c  bta_sdp_cfg.c
system/bt/bta/sys/: bta_sys.h  bta_sys_conn.c  bta_sys_main.c  utl.c
system/bt/btcore/: Android.mk  BUILD.gn
system/bt/btcore/include/: bdaddr.h  device_class.h  device_features.h  event_mask.h  iac.h  module.h  property.h  uuid.h  version.h
system/bt/btcore/src/: bdaddr.c  device_class.c  hal_util.c  module.c  osi_module.c  property.c  uuid.c
system/bt/btcore/test/: bdaddr_test.cpp  device_class_test.cpp  property_test.cpp  uuid_test.cpp
system/bt/btif/: Android.mk  BUILD.gn
system/bt/btif/co/: bta_ag_co.c  bta_av_co.c  bta_dm_co.c  bta_gatts_co.c  bta_hh_co.c  bta_hl_co.c  bta_pan_co.c
system/bt/btif/include/: btif_api.h  btif_av.h  btif_avrcp_audio_track.h  btif_common.h  btif_config.h  btif_debug_btsnoop.h  btif_debug_conn.h  btif_dm.h  btif_gatt_multi_adv_util.h  btif_gatt_util.h  btif_hh.h  btif_hl.h  btif_media.h  btif_pan_internal.h  btif_profile_queue.h  btif_sdp.h  btif_sm.h  btif_sock.h  btif_sock_l2cap.h  btif_sock_rfc.h  btif_sock_sco.h  btif_sock_sdp.h  btif_sock_thread.h  btif_sock_util.h  btif_storage.h  btif_uid.h  btif_util.h  stack_manager.h
system/bt/btif/src/: bluetooth.c  btif_av.c  btif_avrcp_audio_track.cpp  btif_config.c  btif_config_transcode.cpp  btif_core.c  btif_debug.c  btif_debug_btsnoop.c  btif_debug_conn.c  btif_dm.c  btif_gatt.c  btif_gatt_client.c  btif_gatt_multi_adv_util.c  btif_gatt_server.c  btif_gatt_test.c  btif_gatt_util.c  btif_hf.c  btif_hf_client.c  btif_hh.c  btif_hl.c  btif_mce.c  btif_media_task.c  btif_pan.c  btif_profile_queue.c  btif_rc.c  btif_sdp.c  btif_sdp_server.c  btif_sm.c  btif_sock.c  btif_sock_l2cap.c  btif_sock_rfc.c  btif_sock_sco.c  btif_sock_sdp.c  btif_sock_thread.c  btif_sock_util.c  btif_storage.c  btif_uid.c  btif_util.c  stack_manager.c
system/bt/btif/test/: btif_storage_test.cpp
system/bt/hci/: Android.mk  BUILD.gn
system/bt/hci/include/: bt_hci_bdroid.h  bt_vendor_lib.h  btsnoop.h  hci_hal.h  hci_inject.h  hci_layer.h  hci_packet_factory.h  hci_packet_parser.h  low_power_manager.h  packet_fragmenter.h  userial.h  vendor.h
system/bt/hci/src/: btsnoop.c  btsnoop_mem.c  btsnoop_net.c  buffer_allocator.c  hci_audio.c  hci_hal.c  hci_hal_h4.c  hci_hal_mct.c  hci_inject.c  hci_layer.c  hci_packet_factory.c  hci_packet_parser.c  low_power_manager.c  packet_fragmenter.c  vendor.c
system/bt/hci/test/: hci_hal_h4_test.cpp  hci_hal_mct_test.cpp  hci_layer_test.cpp  low_power_manager_test.cpp  packet_fragmenter_test.cpp
system/bt/main/: Android.mk  BUILD.gn  bte_conf.c  bte_init.c  bte_logmsg.c  bte_main.c  stack_config.c
system/bt/osi/: Android.mk  BUILD.gn
system/bt/osi/include/: alarm.h  allocation_tracker.h  allocator.h  array.h  compat.h  config.h  data_dispatcher.h  eager_reader.h  fixed_queue.h  hash_map.h  list.h  log.h  metrics.h  osi.h  properties.h  reactor.h  ringbuffer.h  semaphore.h  socket.h  thread.h  time.h  wakelock.h
system/bt/osi/src/: alarm.c  allocation_tracker.c  allocator.c  array.c  buffer.c  compat.c  config.c  data_dispatcher.c  eager_reader.c  fixed_queue.c  future.c  hash_functions.c  hash_map.c  hash_map_utils.c  list.c  metrics.cpp  metrics_linux.cpp  mutex.c  osi.c  properties.c  reactor.c  ringbuffer.c  semaphore.c  socket.c  thread.c  time.c  wakelock.c
system/bt/osi/test/: AlarmTestHarness.cpp  AlarmTestHarness.h  AllocationTestHarness.cpp  AllocationTestHarness.h  alarm_test.cpp  allocation_tracker_test.cpp  allocator_test.cpp  array_test.cpp  config_test.cpp  data_dispatcher_test.cpp  eager_reader_test.cpp  fixed_queue_test.cpp  future_test.cpp  hash_map_test.cpp  hash_map_utils_test.cpp  list_test.cpp  properties_test.cpp  rand_test.cpp  reactor_test.cpp  (+5 more)
system/bt/service/: Android.mk  BUILD.gn  adapter.cpp  adapter.h  bluetooth_instance.h  bluetoothtbd.rc  daemon.cpp  daemon.h  gatt_client.cpp  gatt_client.h  gatt_server.cpp  gatt_server.h  gatt_server_old.cpp  gatt_server_old.h  logging_helpers.cpp  logging_helpers.h  low_energy_client.cpp  low_energy_client.h  main.cpp  settings.cpp  settings.h  switches.h
system/bt/stack/: Android.mk  BUILD.gn
(+49223 files in other folders)
